<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Simple Tweets</string>
    <string name="login_label">Connect to Twitter</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_timeline">Home Timeline</string>
    <string name="username">Username</string>
    <string name="tweet_body">Tweet Body</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="message_hint">What\'s happening?</string>
    <string name="send">Tweet</string>
    <string name="timestamp">Timestamp</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="website">Website</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="follow">Follow or Setup</string>
    <string name="message_body">Message Body</string>

</resources>