<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.codepath.apps.mysimpletweets.activities.ProfileActivity">
    <include
        layout="@layout/trans_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:id="@+id/llProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:id="@+id/tvDescription"
            android:layout_below="@+id/tvUsername"
            android:layout_alignLeft="@+id/tvUsername"
            android:layout_alignStart="@+id/tvUsername" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:id="@+id/tvLocation"
            android:layout_below="@+id/tvDescription"
            android:layout_alignLeft="@+id/tvDescription"
            android:layout_alignStart="@+id/tvDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/following"
            android:id="@+id/tvFollowing"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/tvLocation"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/followers"
            android:id="@+id/tvFollowers"
            android:layout_marginLeft="40dp"
            android:layout_below="@id/tvLocation"
            android:layout_toRightOf="@+id/tvFollowing"
            android:layout_toEndOf="@+id/tvFollowing" />

        <ImageButton
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:id="@+id/ibProfile"
            android:layout_marginTop="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:id="@+id/tvName"
            android:layout_below="@+id/ibProfile"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:id="@+id/tvUsername"
            android:layout_below="@+id/tvName"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Follow"
            android:id="@+id/btnFollowOrSetup"
            android:layout_alignTop="@+id/ibProfile"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvWebsite"
            android:layout_marginLeft="15dp"
            android:layout_below="@+id/tvDescription"
            android:layout_toRightOf="@+id/tvLocation"
            android:layout_toEndOf="@+id/tvLocation" />

    </RelativeLayout>

    <LinearLayout
        android:layout_below="@+id/llProfile"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.TabLayout
            android:id="@+id/sliding_tabs"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            style="@style/MyCustomTabLayout"
            app:tabMode="scrollable" />

        <android.support.v4.view.ViewPager
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="1"
            android:background="@android:color/white" />
    </LinearLayout>

</RelativeLayout>
