<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.codepath.apps.mysimpletweets.activities.TweetDetailActivity">

    <include
        android:id="@+id/idToolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"/>

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/ibProfile"
        android:layout_below="@id/idToolbar"
        android:background="#75aabe"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:id="@+id/tvName"
        android:layout_below="@id/idToolbar"
        android:layout_toRightOf="@+id/ibProfile"
        android:layout_toEndOf="@+id/ibProfile" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ivTweetMedia"
        android:src="@drawable/ic_location"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@+id/tvBody" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tweet_body"
        android:id="@+id/tvBody"
        android:paddingTop="10dp"
        android:layout_alignLeft="@id/ibProfile"
        android:layout_marginRight="10dp"
        android:layout_below="@+id/ibProfile"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timestamp"
        android:id="@+id/tvTimestamp"
        android:paddingTop="10dp"
        android:layout_alignLeft="@id/ibProfile"
        android:layout_below="@id/ivTweetMedia"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:id="@+id/tvUsername"
        android:layout_alignBottom="@+id/ibProfile"
        android:layout_toRightOf="@+id/ibProfile"
        android:layout_toEndOf="@+id/ibProfile" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:id="@+id/ibReply"
        android:stateListAnimator="@null"
        android:layout_below="@id/tvTimestamp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:layout_alignLeft="@+id/ibProfile"
        android:drawableLeft="@drawable/ic_reply" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:id="@+id/ibRetweet"
        android:layout_marginRight="20dp"
        android:stateListAnimator="@null"
        android:drawableLeft="@drawable/ic_retweet"
        android:layout_alignBottom="@+id/ibReply"
        android:layout_toRightOf="@+id/ibReply"
        android:layout_toEndOf="@+id/ibReply" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:id="@+id/ibLike"
        android:stateListAnimator="@null"
        android:drawableLeft="@drawable/ic_heart"
        android:layout_toRightOf="@+id/ibRetweet"
        android:layout_alignBottom="@+id/ibReply"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etReply"
        android:hint="Reply to"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="15dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
